--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ NEXT_PUBLIC_API_BASE_URL=http://localhost:3001
 NODE_ENV=development
 DATABASE_URL="postgresql://neondb_owner:npg_A27YZwNIqufQ@ep-divine-sunset-ag42ajt6-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
 DIRECT_URL="postgresql://neondb_owner:npg_A27YZwNIqufQ@ep-divine-sunset-ag42ajt6.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
-DNEXTAUTH_SECRET=12D16C923BA17672F89B18C1DB22A
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=12D16C923BA17672F89B18C1DB22A
+NEXTAUTH_URL=http://feferon.cz
 
